--- a/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
+++ b/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "11136293",
+   "id": "c4f072f3",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce826ba",
+   "id": "e07ebac8",
    "metadata": {},
    "source": [
     "### Exercise 17. Conditional Statement\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9e62edc2",
+   "id": "44090656",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "551f0f3d",
+   "id": "54eb9f3f",
    "metadata": {},
    "source": [
     "### Exercise 18. Data Structure (List)\n",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "162e3912",
+   "id": "cdf8ea7c",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aaadfad",
+   "id": "c4123b45",
    "metadata": {},
    "source": [
     "### Exercise 19. Data Structure (List)\n",
@@ -259,35 +259,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "09d940ce",
+   "execution_count": 22,
+   "id": "23cd386c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for |: 'str' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-adcd18340faf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"790101-1234567\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[0mpid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'1'\u001b[0m \u001b[1;33m|\u001b[0m \u001b[0mpid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'3'\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"Male\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32melif\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'2'\u001b[0m \u001b[1;33m|\u001b[0m \u001b[0mpid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'4'\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for |: 'str' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Male\n"
      ]
     }
    ],
    "source": [
     "pid = \"790101-1234567\"\n",
     "\n",
-    "if pid[7] == '1' | pid[7] == '3' :\n",
+    "if pid[7] == '1' or pid[7] == '3' :\n",
     "    print (\"Male\")\n",
-    "elif pd[7] == '2' | pid[7] == '4' :\n",
+    "elif pd[7] == '2' or pid[7] == '4' :\n",
     "    print (\"Female\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a997491e",
+   "id": "84081c07",
    "metadata": {},
    "outputs": [],
    "source": []
