added: Strp, count for String

--- a/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
+++ b/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c4f072f3",
+   "id": "5ef7619e",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07ebac8",
+   "id": "15c8b943",
    "metadata": {},
    "source": [
     "### Exercise 17. Conditional Statement\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "44090656",
+   "id": "8ef89dd3",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54eb9f3f",
+   "id": "a6161dbc",
    "metadata": {},
    "source": [
     "### Exercise 18. Data Structure (List)\n",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cdf8ea7c",
+   "id": "486616e4",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4123b45",
+   "id": "03003da5",
    "metadata": {},
    "source": [
     "### Exercise 19. Data Structure (List)\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "23cd386c",
+   "id": "775ed07c",
    "metadata": {},
    "outputs": [
     {
@@ -281,12 +281,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bf5c047",
+   "metadata": {},
+   "source": [
+    "### Exercise 20. String (strip)\n",
+    "Remove '...' from the given sentence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6b15ac9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "His palms are sweaty, knees weak\n"
+     ]
+    }
+   ],
+   "source": [
+    "sen = \"His palms are sweaty, knees weak...\"\n",
+    "\n",
+    "print (sen.strip(\".\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf448fa5",
+   "metadata": {},
+   "source": [
+    "### Exercise 21. String (strip)\n",
+    "Remove the empty space from the trade code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "61570a86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                000920\n",
+      "            \n"
+     ]
+    }
+   ],
+   "source": [
+    "code = '                000920\\n            '\n",
+    "print (code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "78f91524",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "000920\n"
+     ]
+    }
+   ],
+   "source": [
+    "code = '                000920\\n            '\n",
+    "\n",
+    "print(code.strip(\" \\n\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e08a19b8",
+   "metadata": {},
+   "source": [
+    "### Exercise 22. String (count)\n",
+    "Count how many 'Python' is written on the given paragraph?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84081c07",
+   "id": "a3491273",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "description = \"Python is an interpreted high-level general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation. Its language constructs as well as its object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
