--- a/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
+++ b/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5ef7619e",
+   "id": "b9d5d8e8",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15c8b943",
+   "id": "14781eb8",
    "metadata": {},
    "source": [
     "### Exercise 17. Conditional Statement\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8ef89dd3",
+   "id": "3473352a",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6161dbc",
+   "id": "fce9ead2",
    "metadata": {},
    "source": [
     "### Exercise 18. Data Structure (List)\n",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "486616e4",
+   "id": "27a5eee0",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03003da5",
+   "id": "b963da84",
    "metadata": {},
    "source": [
     "### Exercise 19. Data Structure (List)\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "775ed07c",
+   "id": "fdf5b557",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf5c047",
+   "id": "b03a566e",
    "metadata": {},
    "source": [
     "### Exercise 20. String (strip)\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6b15ac9f",
+   "id": "bf0af088",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf448fa5",
+   "id": "6066aebf",
    "metadata": {},
    "source": [
     "### Exercise 21. String (strip)\n",
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "61570a86",
+   "id": "cf08804f",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "78f91524",
+   "id": "4e1fe108",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08a19b8",
+   "id": "f816ed73",
    "metadata": {},
    "source": [
     "### Exercise 22. String (count)\n",
@@ -369,13 +369,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "49c0a758",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "description = \"Python is an interpreted high-level general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation. Its language constructs as well as its object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.\"\n",
+    "\n",
+    "print(description.count(\"Python\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94341c0e",
+   "metadata": {},
+   "source": [
+    "### Exercise 23. String (count)\n",
+    "Count how many 'p' in the paragraph?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1e6b279e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "description = \"Python is an interpreted high-level general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation. Its language constructs as well as its object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.\"\n",
+    "\n",
+    "print(description.count(\"p\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "138a9280",
+   "metadata": {},
+   "source": [
+    "### Exercise 24. String (string indexing)\n",
+    "Print 2nd and 4th character from the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "4bfc62bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"cocacola\"\n",
+    "\n",
+    "print(string[1])\n",
+    "print(string[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e3982c8",
+   "metadata": {},
+   "source": [
+    "### Exercise 25. String (String indexing)\n",
+    "Create a program that finds the letter in the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1d4b5dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "194uoasf;lkajp9\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = input()\n",
+    "\n",
+    "if string.find(\"a\") >=0 :\n",
+    "    print (\"0\")\n",
+    "else :\n",
+    "    print (\"-1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b612e63",
+   "metadata": {},
+   "source": [
+    "### Exercise 26. String (String indexing)\n",
+    "Expand the program works better then exercise 25."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a3491273",
+   "id": "5af6e8a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "description = \"Python is an interpreted high-level general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation. Its language constructs as well as its object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.\"\n",
-    "\n"
+    "string = input()\n",
+    "\n",
+    "if str"
    ]
   }
  ],
