--- a/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
+++ b/python_algorithm/python_basic/ConditionAndLoopStatement.ipynb
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b9d5d8e8",
+   "id": "a294e145",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14781eb8",
+   "id": "297b476e",
    "metadata": {},
    "source": [
     "### Exercise 17. Conditional Statement\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3473352a",
+   "id": "b438257a",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce9ead2",
+   "id": "0cf72c66",
    "metadata": {},
    "source": [
     "### Exercise 18. Data Structure (List)\n",
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "27a5eee0",
+   "id": "fd4ee30e",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b963da84",
+   "id": "e42a4832",
    "metadata": {},
    "source": [
     "### Exercise 19. Data Structure (List)\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fdf5b557",
+   "id": "47b605ce",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b03a566e",
+   "id": "3fbc0fb0",
    "metadata": {},
    "source": [
     "### Exercise 20. String (strip)\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bf0af088",
+   "id": "e71a05b4",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6066aebf",
+   "id": "95baf06f",
    "metadata": {},
    "source": [
     "### Exercise 21. String (strip)\n",
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cf08804f",
+   "id": "7a3cf2e7",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4e1fe108",
+   "id": "92e3f865",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f816ed73",
+   "id": "6804e5de",
    "metadata": {},
    "source": [
     "### Exercise 22. String (count)\n",
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "49c0a758",
+   "id": "1b3ef698",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94341c0e",
+   "id": "631633cc",
    "metadata": {},
    "source": [
     "### Exercise 23. String (count)\n",
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1e6b279e",
+   "id": "162a556f",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "138a9280",
+   "id": "1ea81917",
    "metadata": {},
    "source": [
     "### Exercise 24. String (string indexing)\n",
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4bfc62bd",
+   "id": "93b64ccf",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e3982c8",
+   "id": "032cb062",
    "metadata": {},
    "source": [
     "### Exercise 25. String (String indexing)\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1d4b5dc5",
+   "id": "850d6173",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b612e63",
+   "id": "06839d22",
    "metadata": {},
    "source": [
     "### Exercise 26. String (String indexing)\n",
@@ -491,15 +491,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5af6e8a6",
+   "execution_count": 38,
+   "id": "b316f196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asdlfkj91ioncv\n",
+      "n does exist in the string\n"
+     ]
+    }
+   ],
    "source": [
     "string = input()\n",
     "\n",
-    "if str"
+    "if string.find(\"n\") >= 0 :\n",
+    "    print (\"n does exist in the string\")\n",
+    "else : \n",
+    "    print (\"n deos not exist in the string\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89d94ca",
+   "metadata": {},
+   "source": [
+    "### Exercise 27. String (String indexing & Conditional Statement)\n",
+    "Expanding the program from Exercise 26."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fb3fddf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12312321\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-57fb8239782f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0midNum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0midNum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midNum\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0midNum\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0midNum\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m8\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m\"Seoul\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "idNum = input()\n",
+    "idNum = int(idNum[8:10])\n",
+    "\n",
+    "if idNum >= 0 and idNum <= 8 :\n",
+    "    print (\"Seoul\")\n",
+    "elif idNum >= 9 and idNum <=12 :\n",
+    "    print (\"Busan\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60ad7bfa",
+   "metadata": {},
+   "source": [
+    "### Exercise 28. String (Split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "29a6b293",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Chris', 'Dre', 'SnoopDog', 'Beyonce', '131313', '22222']\n",
+      "Chris\n",
+      "Dre\n",
+      "SnoopDog\n",
+      "Beyonce\n",
+      "131313\n",
+      "22222\n"
+     ]
+    }
+   ],
+   "source": [
+    "arrays = \"Chris,Dre,SnoopDog,Beyonce,131313,22222\"\n",
+    "arrayList = arrays.split(\",\")\n",
+    "\n",
+    "print (arrayList)\n",
+    "for arrays in arrayList :\n",
+    "    print (arrays)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a7e90e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
