--- a/python_algorithm/pyPractice/p011to020.ipynb
+++ b/python_algorithm/pyPractice/p011to020.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db2fafa8",
+   "id": "76b3f339",
    "metadata": {},
    "source": [
     "참조 사이트 : https://wikidocs.net/7021"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77b9d8cb",
+   "id": "dc0e5b8c",
    "metadata": {},
    "source": [
     "### 011 변수 사용하기\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f98200cf",
+   "id": "f755f1d7",
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "648fe105",
+   "metadata": {},
+   "source": [
+    "### 012 변수 사용하기\n",
+    "다음 표는 삼성전자의 일부 투자정보입니다. 변수를 사용해서 시가총액, 현재가, PER 등을 바인딩해보세요.\n",
+    "\n",
+    "항목       | 값\n",
+    "\n",
+    "시가총액| 298조\n",
+    "\n",
+    "현재가    | 50,000원\n",
+    "\n",
+    "PER        | 15.79\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d45a663e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "298 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "시가총액 = 298\n",
+    "print(시가총액, type(시가총액))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b78e90",
+   "metadata": {},
+   "source": [
+    "### 015 type 함수\n",
+    "type() 함수는 데이터 타입을 판별합니다. 변수 a에는 128 숫자가 바인딩돼 있어 type 함수가 int (정수)형임을 알려줍니다\n",
+    "> a = \"132\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5791186f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"132\"\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac23f64f",
+   "metadata": {},
+   "source": [
+    "### 016 문자열을 정수로 변환\n",
+    "문자열 '720'를 정수형으로 변환해보세요.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "00580934",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'primt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-3390407e9ade>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnum_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"720\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mnum_int\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprimt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_int\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'primt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num_str = \"720\"\n",
+    "num_int = int(num_str)\n",
+    "primt(num_int)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e137a111",
+   "id": "1e70f8e2",
    "metadata": {},
    "outputs": [],
    "source": []
