--- a/python_algorithm/pyPractice/p011to020.ipynb
+++ b/python_algorithm/pyPractice/p011to020.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76b3f339",
+   "id": "b9ff7483",
    "metadata": {},
    "source": [
     "참조 사이트 : https://wikidocs.net/7021"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0e5b8c",
+   "id": "5b0ebbcd",
    "metadata": {},
    "source": [
     "### 011 변수 사용하기\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f755f1d7",
+   "id": "e08fddb6",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "648fe105",
+   "id": "c5d5e366",
    "metadata": {},
    "source": [
     "### 012 변수 사용하기\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d45a663e",
+   "id": "7109f67f",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b78e90",
+   "id": "013cdf52",
    "metadata": {},
    "source": [
     "### 015 type 함수\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5791186f",
+   "id": "71c54fa4",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac23f64f",
+   "id": "c580246b",
    "metadata": {},
    "source": [
     "### 016 문자열을 정수로 변환\n",
@@ -113,32 +113,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "00580934",
+   "execution_count": 15,
+   "id": "20a39533",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'primt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-3390407e9ade>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnum_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"720\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mnum_int\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprimt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_int\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'primt' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "721 <class 'int'>\n"
      ]
     }
    ],
    "source": [
     "num_str = \"720\"\n",
     "num_int = int(num_str)\n",
-    "primt(num_int)"
+    "print(num_int+1, type(num_int))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f49872a",
+   "metadata": {},
+   "source": [
+    "### 018 문자열을 실수로 변환\n",
+    "문자열 \"15.79\"를 실수(float) 타입으로 변환해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bd9edb33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_str = \"15.79\"\n",
+    "num_float = float(num_str)\n",
+    "print (num_float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7e1891",
+   "metadata": {},
+   "source": [
+    "### 019 문자열을 정수로 변환\n",
+    "year라는 변수가 문자열 타입의 연도를 바인딩하고 있습니다. 이를 정수로 변환한 후 최근 3년의 연도를 화면에 출력해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c10213bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017\n",
+      "2018\n",
+      "2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = \"2020\"\n",
+    "yearNum = int(year)\n",
+    "print(yearNum - 3)\n",
+    "print(yearNum - 2)\n",
+    "print(yearNum - 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a4bbfa",
+   "metadata": {},
+   "source": [
+    "### 020 파이썬 계산\n",
+    "에이컨이 월 48,584원에 무이자 36개월의 조건으로 홈쇼핑에서 판매되고 있습니다. 총 금액은 계산한 후 이를 화면에 출력해보세요. (변수사용하기)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "960dc4d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1749024 원\n"
+     ]
+    }
+   ],
+   "source": [
+    "monthly = 48584\n",
+    "term = 36\n",
+    "total = monthly * term\n",
+    "\n",
+    "print (total, \"원\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e70f8e2",
+   "id": "a46aee63",
    "metadata": {},
    "outputs": [],
    "source": []
