--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07e18c51",
+   "id": "0ac8c0e2",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b7678b7",
+   "id": "adacd3d8",
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36055dcc",
+   "id": "8b011fd1",
    "metadata": {},
+   "source": [
+    "### 022 문자열 슬라이싱\n",
+    "자동차 번호가 다음과 같을 때 뒤에 4자리만 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9a1e35bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 2210\n"
+     ]
+    }
+   ],
+   "source": [
+    "license_plate = \"24가 2210\"\n",
+    "print (license_plate[3:])\n",
+    "print (license_plate[-4:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48237356",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
