added: p023. first time encouter.

--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ac8c0e2",
+   "id": "375cfed1",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adacd3d8",
+   "id": "caeab1d3",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b011fd1",
+   "id": "4f9a5105",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9a1e35bc",
+   "id": "d148221f",
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +58,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbc1bd7b",
+   "metadata": {},
+   "source": [
+    "### 023 문자열 인덱싱\n",
+    "아래의 문자열에서 '홀' 만 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e1f2cbc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홀홀홀\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"홀짝홀짝홀짝\"\n",
+    "print(string[::2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73443e47",
+   "metadata": {},
+   "source": [
+    "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48237356",
+   "id": "3935c652",
    "metadata": {},
    "outputs": [],
    "source": []
