added: p024. Slicing the string and reverse it

--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "375cfed1",
+   "id": "66534113",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "caeab1d3",
+   "id": "a1a7adf0",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9a5105",
+   "id": "ca83d8bd",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d148221f",
+   "id": "9be67e4d",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc1bd7b",
+   "id": "e7778fe5",
    "metadata": {},
    "source": [
     "### 023 문자열 인덱싱\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e1f2cbc8",
+   "id": "bd3eef9e",
    "metadata": {},
    "outputs": [
     {
@@ -87,16 +87,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73443e47",
+   "id": "8bddc2f1",
    "metadata": {},
    "source": [
     "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1322de9d",
+   "metadata": {},
+   "source": [
+    "### 024 문자열 슬라이싱\n",
+    "문자열을 거꾸로 뒤집어 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "379c4710",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOHTYP\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = \"PYTHON\"\n",
+    "print(string[::-1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3935c652",
+   "id": "8ea14052",
    "metadata": {},
    "outputs": [],
    "source": []
