--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66534113",
+   "id": "cc5d6ad4",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a1a7adf0",
+   "id": "bea72f90",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca83d8bd",
+   "id": "802dbc1e",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9be67e4d",
+   "id": "96de571b",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7778fe5",
+   "id": "e2cd4deb",
    "metadata": {},
    "source": [
     "### 023 문자열 인덱싱\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd3eef9e",
+   "id": "94585db8",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bddc2f1",
+   "id": "3893ff60",
    "metadata": {},
    "source": [
     "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1322de9d",
+   "id": "71318478",
    "metadata": {},
    "source": [
     "### 024 문자열 슬라이싱\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "379c4710",
+   "id": "65f01041",
    "metadata": {},
    "outputs": [
     {
@@ -122,9 +122,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "538425d3",
+   "metadata": {},
+   "source": [
+    "### 025 문자열 치환\n",
+    "아래의 전화번호에서 하이푼 ('-')을 제거하고 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5757be1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010 1111 2222\n"
+     ]
+    }
+   ],
+   "source": [
+    "phone_number = \"010-1111-2222\"\n",
+    "replace = phone_number.replace(\"-\", \" \")\n",
+    "print(replace)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea14052",
+   "id": "bffe09e2",
    "metadata": {},
    "outputs": [],
    "source": []
