--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc5d6ad4",
+   "id": "7cee8d9d",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bea72f90",
+   "id": "c2cb715f",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802dbc1e",
+   "id": "f83e97a6",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "96de571b",
+   "id": "8461461a",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2cd4deb",
+   "id": "c668310c",
    "metadata": {},
    "source": [
     "### 023 문자열 인덱싱\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "94585db8",
+   "id": "97a469e8",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3893ff60",
+   "id": "3219c17a",
    "metadata": {},
    "source": [
     "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71318478",
+   "id": "3fa54a2a",
    "metadata": {},
    "source": [
     "### 024 문자열 슬라이싱\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "65f01041",
+   "id": "e3344d64",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "538425d3",
+   "id": "6e09504c",
    "metadata": {},
    "source": [
     "### 025 문자열 치환\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5757be1b",
+   "id": "93717f7f",
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +151,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7aaf2b33",
+   "metadata": {},
+   "source": [
+    "### 026 문자열 다루기\n",
+    "25번 문제의 전화번호를 아래와 같이 모두 붙여 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f3969ebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01011112222\n"
+     ]
+    }
+   ],
+   "source": [
+    "phone_number = \"010-1111-2222\"\n",
+    "replace = phone_number.replace(\"-\", \"\")\n",
+    "print(replace)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bffe09e2",
+   "id": "9a488cd8",
    "metadata": {},
    "outputs": [],
    "source": []
