--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7cee8d9d",
+   "id": "4ed63bf5",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2cb715f",
+   "id": "965e3cd8",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f83e97a6",
+   "id": "4849d13a",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8461461a",
+   "id": "5b2c28c1",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c668310c",
+   "id": "fb841ea0",
    "metadata": {},
    "source": [
     "### 023 문자열 인덱싱\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97a469e8",
+   "id": "a5a777bb",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3219c17a",
+   "id": "3ee0b4d5",
    "metadata": {},
    "source": [
     "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa54a2a",
+   "id": "38da719e",
    "metadata": {},
    "source": [
     "### 024 문자열 슬라이싱\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e3344d64",
+   "id": "c576c094",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e09504c",
+   "id": "d6dff8d6",
    "metadata": {},
    "source": [
     "### 025 문자열 치환\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "93717f7f",
+   "id": "0ceda9b8",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aaf2b33",
+   "id": "ed6fbafc",
    "metadata": {},
    "source": [
     "### 026 문자열 다루기\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f3969ebf",
+   "id": "f06d361b",
    "metadata": {},
    "outputs": [
     {
@@ -180,9 +180,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c031a70",
+   "metadata": {},
+   "source": [
+    "### 027 문자열 다루기\n",
+    "url 에 저장된 웹 페이지 주소에서 도메인을 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a2c9f0a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kr\n",
+      "kr\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"http://sharebook.kr\"\n",
+    "print (url[-2:])\n",
+    "\n",
+    "# using split\n",
+    "split = url.split('.')\n",
+    "print (split[-1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a488cd8",
+   "id": "7a8aced0",
    "metadata": {},
    "outputs": [],
    "source": []
