added: p028. str is immnutable.

--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4ed63bf5",
+   "id": "7ab00f04",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "965e3cd8",
+   "id": "728d9ffb",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4849d13a",
+   "id": "b2d21710",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5b2c28c1",
+   "id": "b6cb0056",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb841ea0",
+   "id": "b54eeceb",
    "metadata": {},
    "source": [
     "### 023 문자열 인덱싱\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a5a777bb",
+   "id": "84f08a06",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee0b4d5",
+   "id": "f50a6086",
    "metadata": {},
    "source": [
     "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38da719e",
+   "id": "bc2c64b6",
    "metadata": {},
    "source": [
     "### 024 문자열 슬라이싱\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c576c094",
+   "id": "2c7186ae",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6dff8d6",
+   "id": "9afe2755",
    "metadata": {},
    "source": [
     "### 025 문자열 치환\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0ceda9b8",
+   "id": "06320459",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6fbafc",
+   "id": "e63ec772",
    "metadata": {},
    "source": [
     "### 026 문자열 다루기\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f06d361b",
+   "id": "303430db",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c031a70",
+   "id": "fa8e8a92",
    "metadata": {},
    "source": [
     "### 027 문자열 다루기\n",
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a2c9f0a4",
+   "id": "4a18e68d",
    "metadata": {},
    "outputs": [
     {
@@ -213,9 +213,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1943192f",
+   "metadata": {},
+   "source": [
+    "### 028 문자열은 immutable\n",
+    "아래 코드의 실행 결과를 예상해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "94ce2b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-ba8eb7824ab8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlang\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'python'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlang\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'P'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlang\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "lang = 'python'\n",
+    "lang[0] = 'P'\n",
+    "print(lang)\n",
+    "\n",
+    "# it will show TypeError."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8aced0",
+   "id": "6c2e4b8d",
    "metadata": {},
    "outputs": [],
    "source": []
