added: p029 using replace.

--- a/python_algorithm/pyPractice/p021to030.ipynb
+++ b/python_algorithm/pyPractice/p021to030.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ab00f04",
+   "id": "7a0fa678",
    "metadata": {},
    "source": [
     "### 021 문자열 인덱싱\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "728d9ffb",
+   "id": "04f701cb",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d21710",
+   "id": "6d86efc6",
    "metadata": {},
    "source": [
     "### 022 문자열 슬라이싱\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6cb0056",
+   "id": "7be9b5fe",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b54eeceb",
+   "id": "b788e8d2",
    "metadata": {},
    "source": [
     "### 023 문자열 인덱싱\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "84f08a06",
+   "id": "104ac285",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50a6086",
+   "id": "3f3b5dc0",
    "metadata": {},
    "source": [
     "슬라이싱할 때 시작인덱스:끝인덱스:오프셋을 지정\n"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2c64b6",
+   "id": "7ff3d58e",
    "metadata": {},
    "source": [
     "### 024 문자열 슬라이싱\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2c7186ae",
+   "id": "fc4b0bb2",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9afe2755",
+   "id": "747fa82e",
    "metadata": {},
    "source": [
     "### 025 문자열 치환\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "06320459",
+   "id": "75826373",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63ec772",
+   "id": "ecf0f437",
    "metadata": {},
    "source": [
     "### 026 문자열 다루기\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "303430db",
+   "id": "2ab18059",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa8e8a92",
+   "id": "5835dbd1",
    "metadata": {},
    "source": [
     "### 027 문자열 다루기\n",
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4a18e68d",
+   "id": "9c39eb62",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1943192f",
+   "id": "7e4b8ccd",
    "metadata": {},
    "source": [
     "### 028 문자열은 immutable\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "94ce2b7b",
+   "id": "345fde30",
    "metadata": {},
    "outputs": [
     {
@@ -248,9 +248,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "984379dd",
+   "metadata": {},
+   "source": [
+    "### 029 replace 메서드\n",
+    "아래 문자열에서 소문자 'a'를 대문자 'A'로 변경하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5448d1df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abcdfe2A354A32A\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'abcdfe2a354a32a'\n",
+    "string = string.replace('a', 'A')\n",
+    "print(string)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c2e4b8d",
+   "id": "c11d528d",
    "metadata": {},
    "outputs": [],
    "source": []
