added: p033 & 034. string multiplication.

--- a/python_algorithm/pyPractice/p031to040.ipynb
+++ b/python_algorithm/pyPractice/p031to040.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bf95088",
+   "id": "6d4fe996",
    "metadata": {},
    "source": [
     "### 031 문자열 합치기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2e858bd3",
+   "id": "8fa03970",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dbbacd2",
+   "id": "8ca4ffff",
    "metadata": {},
    "source": [
     "### 032 문자열 곱하기\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7954c24c",
+   "id": "a85422db",
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +58,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712fef3d",
+   "id": "432e8211",
    "metadata": {},
+   "source": [
+    "### 033 문자열 곱하기\n",
+    "화면에 '-'를 80개 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "929a6f7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('-' * 80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4087f62",
+   "metadata": {},
+   "source": [
+    "### 034 문자열 곱하기\n",
+    "변수에 다음과 같은 문자열이 바인딩되어 있습니다.\n",
+    "<br> t1 = 'python'\n",
+    "<br> t2 = 'java'\n",
+    "<br> 변수에 문자열 더하기와 문자열 곱하기를 사용해서 아래와 같이 출력해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a4fbdebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pythonjavapythonjavapythonjavapythonjavapythonjava\n",
+      "python java python java python java python java python java \n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = 'python'\n",
+    "t2 = 'java'\n",
+    "\n",
+    "print ((t1 + t2) * 5)\n",
+    "\n",
+    "t3 = t1 + ' ' + t2 + ' '\n",
+    "print (t3 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36520da1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
