--- a/python_algorithm/pyPractice/p031to040.ipynb
+++ b/python_algorithm/pyPractice/p031to040.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d4fe996",
+   "id": "32ff6729",
    "metadata": {},
    "source": [
     "### 031 문자열 합치기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8fa03970",
+   "id": "8ba89f03",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca4ffff",
+   "id": "e2e718bd",
    "metadata": {},
    "source": [
     "### 032 문자열 곱하기\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a85422db",
+   "id": "bc3e58b3",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "432e8211",
+   "id": "fdf311f7",
    "metadata": {},
    "source": [
     "### 033 문자열 곱하기\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "929a6f7a",
+   "id": "97cba830",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4087f62",
+   "id": "b68ec14c",
    "metadata": {},
    "source": [
     "### 034 문자열 곱하기\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a4fbdebd",
+   "id": "dbcc21fb",
    "metadata": {},
    "outputs": [
     {
@@ -121,9 +121,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4553ac04",
+   "metadata": {},
+   "source": [
+    "### 035 문자열 출력\n",
+    "변수에 다음과 같이 문자열과 정수가 바인딩되어 있을 때 % formatting을 사용해서 다음과 같이 출력해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "53e55d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 김민수 나이: 10\n",
+      "이름: 이철희 나이: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1 = \"김민수\" \n",
+    "age1 = 10\n",
+    "name2 = \"이철희\"\n",
+    "age2 = 13\n",
+    "\n",
+    "# print (\"이름: \" + name1 + \" 나이: \" + age1)\n",
+    "\n",
+    "print (\"이름: %s 나이: %d\" % (name1, age1))\n",
+    "print (\"이름: %s 나이: %d\" % (name2, age2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36520da1",
+   "id": "9b8713e6",
    "metadata": {},
    "outputs": [],
    "source": []
