added: p036 & 037 with .foramt() and f-string

--- a/python_algorithm/pyPractice/p031to040.ipynb
+++ b/python_algorithm/pyPractice/p031to040.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32ff6729",
+   "id": "1cf4f69d",
    "metadata": {},
    "source": [
     "### 031 문자열 합치기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8ba89f03",
+   "id": "598114a7",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e718bd",
+   "id": "0398688e",
    "metadata": {},
    "source": [
     "### 032 문자열 곱하기\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bc3e58b3",
+   "id": "9a5d0494",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf311f7",
+   "id": "802dceb2",
    "metadata": {},
    "source": [
     "### 033 문자열 곱하기\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97cba830",
+   "id": "7e49b5b1",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b68ec14c",
+   "id": "f1c25f7e",
    "metadata": {},
    "source": [
     "### 034 문자열 곱하기\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dbcc21fb",
+   "id": "fdc589f0",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4553ac04",
+   "id": "89d55ce5",
    "metadata": {},
    "source": [
     "### 035 문자열 출력\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53e55d62",
+   "id": "9622a7cd",
    "metadata": {},
    "outputs": [
     {
@@ -157,9 +157,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a5fbe69",
+   "metadata": {},
+   "source": [
+    "### 036 문자열 출력\n",
+    "문자열의 format( ) 메서드를 사용해서 035번 문제를 다시 풀어보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "de1c9c0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름 : 김민수 나이: 10\n",
+      "이름 : 이철희 나이: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1 = \"김민수\" \n",
+    "age1 = 10\n",
+    "name2 = \"이철희\"\n",
+    "age2 = 13\n",
+    "print (\"이름 : {} 나이: {}\".format(name1, age1))\n",
+    "print (\"이름 : {} 나이: {}\".format(name2, age2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8c574cb",
+   "metadata": {},
+   "source": [
+    "### 037 문자열 출력\n",
+    "파이썬 3.6부터 지원하는 f-string을 사용해서 035번 문제를 다시 풀어보세요.\n",
+    "<br> f-string은 문자열 앞에 f가 붙은 형태입니다. f-string을 사용하면 {변수}와 같은 형태로 문자열 사이에 타입과 상관없이 값을 출력할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "00eaed68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름: 김민수 나이: 10\n",
+      "이름: 이철희 나이: 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "name1 = \"김민수\" \n",
+    "age1 = 10\n",
+    "name2 = \"이철희\"\n",
+    "age2 = 13\n",
+    "print(f\"이름: {name1} 나이: {age1}\")\n",
+    "print(f\"이름: {name2} 나이: {age2}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b8713e6",
+   "id": "8656e0ac",
    "metadata": {},
    "outputs": [],
    "source": []
