--- a/python_algorithm/pyPractice/p031to040.ipynb
+++ b/python_algorithm/pyPractice/p031to040.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1cf4f69d",
+   "id": "81d7a401",
    "metadata": {},
    "source": [
     "### 031 문자열 합치기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "598114a7",
+   "id": "5f562c43",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0398688e",
+   "id": "a281d62e",
    "metadata": {},
    "source": [
     "### 032 문자열 곱하기\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9a5d0494",
+   "id": "22fbfe35",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802dceb2",
+   "id": "950038ce",
    "metadata": {},
    "source": [
     "### 033 문자열 곱하기\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e49b5b1",
+   "id": "c32a414e",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c25f7e",
+   "id": "607ec675",
    "metadata": {},
    "source": [
     "### 034 문자열 곱하기\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fdc589f0",
+   "id": "421e1518",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d55ce5",
+   "id": "7a23e7de",
    "metadata": {},
    "source": [
     "### 035 문자열 출력\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9622a7cd",
+   "id": "f916ba01",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a5fbe69",
+   "id": "88fef769",
    "metadata": {},
    "source": [
     "### 036 문자열 출력\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "de1c9c0c",
+   "id": "c45b0053",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c574cb",
+   "id": "e76223b2",
    "metadata": {},
    "source": [
     "### 037 문자열 출력\n",
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "00eaed68",
+   "id": "1b68490e",
    "metadata": {},
    "outputs": [
     {
@@ -224,9 +224,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "209d02e2",
+   "metadata": {},
+   "source": [
+    "### 038 컴마 제거하기\n",
+    "삼성전자의 상장주식수가 다음과 같습니다. 컴마를 제거한 후 이를 정수 타입으로 변환해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b2c2f729",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5969782550\n"
+     ]
+    }
+   ],
+   "source": [
+    "상장주식수 = \"5,969,782,550\"\n",
+    "replace = 상장주식수.replace(\",\", \"\")\n",
+    "\n",
+    "print(int(replace))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8656e0ac",
+   "id": "1468ea9e",
    "metadata": {},
    "outputs": [],
    "source": []
