--- a/python_algorithm/pyPractice/p031to040.ipynb
+++ b/python_algorithm/pyPractice/p031to040.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81d7a401",
+   "id": "1c1ae46d",
    "metadata": {},
    "source": [
     "### 031 문자열 합치기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f562c43",
+   "id": "681329a4",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a281d62e",
+   "id": "674cba56",
    "metadata": {},
    "source": [
     "### 032 문자열 곱하기\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22fbfe35",
+   "id": "6c47be8d",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950038ce",
+   "id": "d095d12c",
    "metadata": {},
    "source": [
     "### 033 문자열 곱하기\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c32a414e",
+   "id": "9946dac9",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607ec675",
+   "id": "d4fde870",
    "metadata": {},
    "source": [
     "### 034 문자열 곱하기\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "421e1518",
+   "id": "18fa310b",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a23e7de",
+   "id": "b9e4438c",
    "metadata": {},
    "source": [
     "### 035 문자열 출력\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f916ba01",
+   "id": "002172af",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88fef769",
+   "id": "6b2415c3",
    "metadata": {},
    "source": [
     "### 036 문자열 출력\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c45b0053",
+   "id": "94d2903d",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76223b2",
+   "id": "dc099626",
    "metadata": {},
    "source": [
     "### 037 문자열 출력\n",
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1b68490e",
+   "id": "13d44401",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209d02e2",
+   "id": "5f650564",
    "metadata": {},
    "source": [
     "### 038 컴마 제거하기\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b2c2f729",
+   "id": "aa66e31a",
    "metadata": {},
    "outputs": [
     {
@@ -254,9 +254,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d125943",
+   "metadata": {},
+   "source": [
+    "### 039 문자열 슬라이싱\n",
+    "다음과 같은 문자열에서 '2020/03'만 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "715f7d26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020/03\n"
+     ]
+    }
+   ],
+   "source": [
+    "분기 = \"2020/03(E) (IFRS연결)\"\n",
+    "print(분기[:7])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1468ea9e",
+   "id": "6404ebe5",
    "metadata": {},
    "outputs": [],
    "source": []
