--- a/python_algorithm/pyPractice/p041to050.ipynb
+++ b/python_algorithm/pyPractice/p041to050.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "df3d433f",
+   "id": "ad5293dd",
    "metadata": {},
    "source": [
     "### 041 upper 메서드\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6dd2e755",
+   "id": "0008260e",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a3a9f5",
+   "id": "604ccfa2",
    "metadata": {},
    "source": [
     "### 042 lower 메서드\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "10e4ad0d",
+   "id": "cba92f41",
    "metadata": {},
    "outputs": [
     {
@@ -59,9 +59,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87975861",
+   "metadata": {},
+   "source": [
+    "### 043 capitalize 메서드\n",
+    "문자열 'hello'가 있을 때 이를 'Hello'로 변경해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1ef4f532",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = 'hello'\n",
+    "string = string.capitalize()\n",
+    "print (string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d940985",
+   "metadata": {},
+   "source": [
+    "### 044 endswith 메서드\n",
+    "파일 이름이 문자열로 저장되어 있을 때 endswith 메서드를 사용해서 파일 이름이 'xlsx'로 끝나는지 확인해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9bedafb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = \"보고서.xlsx\"\n",
+    "print (file_name.endswith(\".xlsx\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "237c04b3",
+   "metadata": {},
+   "source": [
+    "### 045 endswith 메서드\n",
+    "파일 이름이 문자열로 저장되어 있을 때 endswith 메서드를 사용해서 파일 이름이 'xlsx' 또는 'xls'로 끝나는지 확인해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b49ebeda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = \"보고서.xlsx\"\n",
+    "file_name.endswith((\"xlsx\", \"xls\")) # 문제에서 표현하고자 햇던 부분은 기거임.\n",
+    "\n",
+    "print (file_name.endswith(\".xlsx\" or \".xls\"))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "274da441",
+   "id": "a884af92",
    "metadata": {},
    "outputs": [],
    "source": []
