added: p053 using .insert method.

--- a/python_algorithm/pyPractice/p051to060.ipynb
+++ b/python_algorithm/pyPractice/p051to060.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1635d968",
+   "id": "2719cff9",
    "metadata": {},
    "source": [
     "### 051 리스트 생성\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "302f5409",
+   "id": "0141c47b",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd6e8ac",
+   "id": "16a8735d",
    "metadata": {},
    "source": [
     "### 052 리스트에 원소 추가\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4175a54a",
+   "id": "c796370d",
    "metadata": {},
    "outputs": [
     {
@@ -65,9 +65,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e319cd6d",
+   "metadata": {},
+   "source": [
+    "### 053 중간에 추가\n",
+    "movie_rank 리스트에는 아래와 같이 네 개의 영화 제목이 바인딩되어 있다. \"슈퍼맨\"을 \"닥터 스트레인지\"와 \"스플릿\" 사이에 추가하라.\n",
+    "\n",
+    "movie_rank = ['닥터 스트레인지', '스플릿', '럭키', '배트맨']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b5d027a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['닥터 스트레인지', '수퍼맨', '스플릿', '럭키', '배트맨']\n"
+     ]
+    }
+   ],
+   "source": [
+    "movie = ['닥터 스트레인지', '스플릿', '럭키', '배트맨']\n",
+    "movie.insert(1, '수퍼맨')\n",
+    "print (movie)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26c06915",
+   "id": "f61bd4fc",
    "metadata": {},
    "outputs": [],
    "source": []
